spacing fix

--- a/client/src/styles/overview/MiniPlan.css
+++ b/client/src/styles/overview/MiniPlan.css
@@ -3,6 +3,7 @@
   border-radius: 10%;
   padding: 1em 1em;
   margin-right: 1.2em;
+    margin-bottom: 2em;
 
 }
 
